# extractive-summarization

./: .env.template  .gitignore  README.md  main.py  pyproject.toml  textrank.py
config/: benchmark.yaml  summarization.yaml
docs/: USB_Benchmark_results.md  benchmark_evaluation_guide.md  gidf_integration_plan.md  gidf_vocab_build_plan.md  plan.md
scripts/: generate_live_test_report.py  prepare_benchmark_datasets.py  run_benchmark.py  run_usb_ext_evaluation.py
src/storage/: __init__.py  base.py  postgres_storage.py
src/summarization/: __init__.py  config.py  embedder.py  fusion.py  graph_ranker.py  lsa_scorer.py  sentence_splitter.py  summarizer.py  term_tokenizer.py  text_unit_dataset.py  utils.py  vocab_builder.py
src/summarization/benchmark/: __init__.py  datasets.py  metrics.py  pipeline.py  usb_ext.py
tests/: conftest.py
tests/integration/: test_extractive_summarization_pipeline.py  test_text_unit_data_preparation.py
tests/summarization/: test_benchmark_datasets.py  test_benchmark_metrics.py  test_benchmark_pipeline.py  test_config.py  test_embedder.py  test_fusion.py  test_gidf.py  test_graph_ranker.py  test_sentence_splitter.py  test_summarizer.py  test_term_tokenizer.py  test_text_unit_dataset.py  test_usb_ext_evaluation.py
